--- a/foundry.toml
+++ b/foundry.toml
@@ -6,7 +6,7 @@ remappings = ['@openzeppelin/contracts=lib/openzeppelin-contracts/contracts']
 ffi = true
 fs_permissions = [
     { access = "read", path = "./broadcast" },
-    { access = "read", path = "./Images/" },
+    { access = "read", path = "./img/" },
 ]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
